# yxcvbn

./: Cargo.toml  README.md
.github/workflows/: yxcvbn.yml  zxcvbn.yml
benches/: zxcvbn.rs  zxcvbn_unicode.rs
src/: feedback.rs  frequency_lists.rs  lib.rs  scoring.rs  serialization_utils.rs  time_estimates.rs
src/matching/: mod.rs  patterns.rs
