[package]
authors = [
    "Lia an Haack <lia@staff.identeco.de>, Fabian Odenthal <fabian@staff.identeco.de>",
]
description = "An entropy-based password strength estimator, originally for Javascript by Dropbox."
license = "MIT"
name = "yxcvbn"
repository = "https://github.com/Identeco/yxcvbn"
version = "2.2.2"
edition = "2021"
rust-version = "1.63"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
derive_builder = { version = "0.20.0", optional = true }
fancy-regex = "0.13.0"
itertools = "0.12.1"
lazy_static = "1.3"
quick-error = "2.0"
regex = "1"
time = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.56"

[dependencies.serde]
optional = true
version = "1"

[dependencies.serde_derive]
optional = true
version = "1"

[dev-dependencies]
quickcheck = "1.0.0"
serde_json = "1"
criterion = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["builder"]
ser = ["serde", "serde_derive"]
builder = ["derive_builder"]

[profile.test]
opt-level = 2

[[bench]]
name = "zxcvbn"
harness = false

[[bench]]
name = "zxcvbn_unicode"
harness = false
